# signal-serve

./: .dockerignore  .gitignore  Cargo.toml  Cross.toml  README.md  cross-pre-build.sh  gen-qr.py  signal-link.sh
.github/workflows/: ci.yml  generator-generic-ossf-slsa3-publish.yml
patches/: libsignal-service-v0.97.0.patch  presage-v0.97.0.patch
src/: main.rs  rpc.rs  sse.rs  ws.rs
tests/: e2e.rs
tests/common/: mod.rs
