[package]
name = "signal-serve"
version = "0.1.0"
edition = "2021"
description = "Native Signal REST API daemon (pure Rust, no JVM)"

[dependencies]
presage = { git = "https://github.com/nramabad/presage.git", rev = "540210ae5" }
presage-store-sqlite = { git = "https://github.com/nramabad/presage.git", rev = "540210ae5" }

axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }

# Force libsqlite3-sys to use vendored-openssl (avoids cross-compile OpenSSL hell)
libsqlite3-sys = { version = "0.36", features = ["bundled-sqlcipher-vendored-openssl"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
futures = "0.3"
base64 = "0.22"
tokio-stream = { version = "0.1", features = ["sync"] }
async-stream = "0.3"

[patch.crates-io]
curve25519-dalek = { git = "https://github.com/signalapp/curve25519-dalek", tag = "signal-curve25519-4.1.3" }

[patch."https://github.com/whisperfish/libsignal-service-rs.git"]
libsignal-service = { git = "https://github.com/nramabad/libsignal-service-rs.git", rev = "0c3ead752" }

[profile.release]
lto = true
codegen-units = 1
strip = true